tests/snapshots/diagnostic_tests__ui@recover_call.au.snap
---
source: tests/diagnostic_tests.rs
expression: "fn main() {\n    let a = 1\n    bar(a., 2)\n}\n\nfn bar(a: I32, b: I32) {\n    print(a)\n    print(b)\n}\n"
input_file: tests/inputs/diagnostics/recover_call.au
---
Error: Unexpected token
   ╭─[ recover_call:3:11 ]
   │
 3 │     bar(a., 2)
   │           │ 
   │           ╰─ got ","
   │ 
   │ Note: Expected `<identifier>`
───╯

Error: Mismatched argument count
   ╭─[ recover_call:3:5 ]
   │
 6 │ fn bar(a: I32, b: I32) {
   │       ────────┬────────  
   │               ╰────────── Due to the definition here
   │
   ├─[ recover_call:3:5 ]
   │
 3 │     bar(a., 2)
   │     ─────┬────  
   │          ╰────── Expected 2 arguments, but got 1
───╯
